--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
 </head>
 <body>
